# amber-voice-agent

./: .gitignore  CLAUDE.md  README.md  api.py  banking_customer_api.py  banking_persona.py  banking_tools.py  bot.py  calendar_google.py  db.py  dentist_persona.py  loan_checkpoints.db-shm  loan_checkpoints.db-wal  pyproject.toml  restaurant_persona.py  restaurant_tools.py  seed.py  sentiment.py  tools.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: CallDetail.tsx  CallLog.tsx  LiveMonitor.tsx  LoanDashboard.tsx  OnboardWizard.tsx  TenantSettings.tsx
loan/: graph.py  mock_apis.py  nodes.py  state.py
