[project]
name = "ai-receptionist"
version = "0.1.0"
description = "Learning-oriented AI receptionist voice agent (Pipecat)"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[anthropic,deepgram,cartesia,silero,local]>=1.0",
    "python-dotenv>=1.0",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    "anthropic>=0.40",
    "aiosqlite>=0.22.1",
]
